--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,26 @@ img:hover {
   background-color: #dd4444;
 }
 
+.column {
+  width: 30%;
+  display:inline-block;
+}
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
+.small {
+  height: 100%;
+  width: 100%;
+}
+
+.medium {
+  height: 200%;
+  width: 200%;
+  display:inline-block;
+}
+
+.large {
+  height: 300%;
+  width: 300%;
+  margin: 0 auto;
+}
 /* create your tile classes! we recommend .small .med .large */
