--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 body, html {
   width: 100%;
   height: 100%;
@@ -45,6 +48,26 @@ img:hover {
   box-shadow: -1px 1px #aa2222, -2px 2px #aa2222, -3px 3px #aa2222, -4px 4px #aa2222, -5px 5px #aa2222;
   background-color: #dd4444;
 }
+.column {
+width: 30%;
+display:inline-block;
+}
+
+.small {
+  width:100%;
+  height:100%;
+}
+.med {
+  width:200%;
+  height:200%;
+}
+.large {
+  width:300%;
+  height:300%;
+}
+
+  
+
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
